--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ archivesBaseName = 'announcer'
 
 repositories {
     mavenCentral()
+    maven {
+        name = 'Fabric'
+        url = 'https://maven.fabricmc.net/'
+    }
 }
 
 dependencies {
