--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     minecraft "com.mojang:minecraft:1.21.1"
     mappings "net.fabricmc:yarn:1.21.1+build.1:v2"
     modImplementation "net.fabricmc:fabric-loader:0.15.7"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.91.0+1.21.1"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.91.0+1.21.1-SNAPSHOT"
 }
 
 processResources {
